--- a/2-Django-React.js/docker-compose.yaml
+++ b/2-Django-React.js/docker-compose.yaml
@@ -3,9 +3,10 @@ services:
     backend:
         build: ./backend
         restart: always
+        environment: 
+          - SECRET_KEY=PfhE*M+H#4H=M^%@
         ports:
           - "8000:8000"
-
     frontend:
         build: ./frontend
         ports:
